--- a/mywebserver.yml
+++ b/mywebserver.yml
@@ -13,3 +13,13 @@
       name: apache2
       state: started
     when: ansible_os_family =="Debian"
+  - name: I want install httpd on amazon linux
+    yum:
+      name: httpd
+      state: present
+    when: ansible_os_family =="RedHat"
+  - name: I want start httpd
+    service: 
+      name: httpd
+      state: started
+    when: ansible_os_family =="RedHat"
