--- a/mywebserver.yml
+++ b/mywebserver.yml
@@ -5,21 +5,21 @@
   tasks:
   - name: I want install apache2
     apt:
-      name: apache2
+      name: "{{mywebpackonubuntu}}"
       state: present
     when: ansible_os_family =="Debian"
   - name: I want start apache2
     service:
-      name: apache2
+      name: "{{mywebpackonubuntu}}"
       state: started
     when: ansible_os_family =="Debian"
   - name: I want install httpd on amazon linux
     ansible.builtin.dnf:
-      name: httpd
+      name: "{{mywebpackonredhat}}"
       state: present
     when: ansible_os_family =="RedHat"
   - name: I want start httpd
     service: 
-      name: httpd
+      name: "{{mywebpackonredhat}}"
       state: started
     when: ansible_os_family =="RedHat"
