--- a/filehandeling.yml
+++ b/filehandeling.yml
@@ -12,6 +12,13 @@
     template:
       src: mydynoindex.j2
       dest: /var/www/html/index.html
+    notify: restartwebserver
+
+  handlers: 
+  - name: restartwebserver
+    service:
+      name: apache2
+      state: restarted
 
 
 
