--- a/mytomrole/tasks/downloadtomcat.yml
+++ b/mytomrole/tasks/downloadtomcat.yml
@@ -10,7 +10,7 @@
     state: directory
 
 - name: Extract tomcat tar file
-  command:
-    cmd: sudo tar xzvf /home/ubuntu/apache-tomcat-10*tar.gz -C /opt/tomcat --strip-components=1
+  command: sudo tar xzvf /home/ubuntu/apache-tomcat-10*tar.gz -C /opt/tomcat --strip-components=1
+  args: 
     creates: /opt/tomcat/LICENSE
     
