--- a/mytomrole/tasks/deployjavaapp.yml
+++ b/mytomrole/tasks/deployjavaapp.yml
@@ -1,6 +1,6 @@
 ---
 - name: deploy java application on webapps folder
   get_url:
-    url: https://maha24may23.s3.us-east-2.amazonaws.com/login.war
-    dest: /opt/tomcat/webapps/login.war
+    url: https://maha24may23.s3.us-east-2.amazonaws.com/gameoflife.war
+    dest: /opt/tomcat/webapps/gameoflife.war
     force_basic_auth: yes
