--- a/deploy-node.yml
+++ b/deploy-node.yml
@@ -9,4 +9,16 @@
      pkg:
      - nodejs
      - npm 
-    
+
+- name: Deploy nodejs app 
+  hosts: 172.31.20.233
+  tasks: 
+  - name: Copy a nodejs folder to a server
+    copy:
+     src: /home/ubuntu/ansible-project/simple-nodejs/nodejs-app-1.0.0.tgz
+     dest: /home/ubuntu/app-1.0.0.tgz
+  - name: Unpack the nodejs file
+    unarchive:
+     src: /home/ubuntu/app-1.0.0.tgz
+     dest: /home/ubuntu 
+     remote_src: yes
