--- a/deploy-node.yml
+++ b/deploy-node.yml
@@ -24,5 +24,5 @@
      path: /home/ubuntu/package
   - name: Start the application
     command:
-     chdir: /home/ubuntu/package
+     chdir: /home/ubuntu/package/app
      cmd: node server.js
