--- a/deploy-node.yml
+++ b/deploy-node.yml
@@ -28,7 +28,7 @@
 
 - name: Deploy nodejs app 
   hosts: 172.31.20.233
-  become: yes 
+  become: True 
   become_user: chinu 
   tasks: 
   - name: Unpack the nodejs file
