--- a/deploy-node.yml
+++ b/deploy-node.yml
@@ -17,18 +17,6 @@
   tasks: 
   - name: Unpack the nodejs file
     unarchive:
-     src: /home/ubuntu/ansible-project/simple-nodejs/nodejs-app-1.0.0.tgz
-     dest: /home/ubuntu
-  - name: Install Dependencies
-    npm:
-     path: /home/ubuntu/package
-  - name: Start the application
-    command:
-     chdir: /home/ubuntu/package/app
-     cmd: node server
-    async: 1000
-    poll: 0
-  - name: Ensure app is running
-    shell: ps aux | grep node
-    register: app_status
-  - debug: msg={{app_status.stdout_lines}}
+     src: /home/chinu/ansible-project/simple-nodejs
+     dest: /home/chinu
+  
