--- a/deploy-node.yml
+++ b/deploy-node.yml
@@ -28,6 +28,10 @@
      cmd: node server
     async: 1000
     poll: 0
+  - name: Ensure app is running
+    shell: ps aux | grep node
+    register: app_status
+  - debug: msg={{app_status}}
   
      
   
