--- a/deploy-node.yml
+++ b/deploy-node.yml
@@ -31,7 +31,7 @@
   - name: Ensure app is running
     shell: ps aux | grep node
     register: app_status
-  - debug: msg={{app_status}}
+  - debug: msg={{app_status.stdout_lines}}
   
      
   
