--- a/deploy-node.yml
+++ b/deploy-node.yml
@@ -21,13 +21,13 @@
   - name: Unpack the nodejs file
     unarchive:
      src: "{{location}}/nodejs-app-{{version}}.tgz"
-     dest: "{{home_home_dir}}"
+     dest: "{{user_home_dir}}"
   - name: Install Dependencies
     npm:
-     path: "{{home_home_dir}}/package"
+     path: "{{user_home_dir}}/package"
   - name: Start the application
     command:
-     chdir: "{{home_home_dir}}/package/app"
+     chdir: "{{user_home_dir}}/package/app"
      cmd: node server
     async: 1000
     poll: 0
