--- a/deploy-nexus.yml
+++ b/deploy-nexus.yml
@@ -25,3 +25,10 @@
       src: "{{download_result.dest}}"
       dest: /opt/
       remote_src: yes
+  - name: Find nexus folder
+    find:
+      paths: /opt/
+      pattern: "nexus-*"
+      file_type: directory
+    register: find_result
+  - debug: msg={{find_result}}
