--- a/deploy-nexus.yml
+++ b/deploy-nexus.yml
@@ -31,4 +31,6 @@
       pattern: "nexus-*"
       file_type: directory
     register: find_result
-  - debug: msg={{find_result}}
+  #- debug: msg={{find_result}}
+  - name: Rename Nexus folder
+    shell: mv {{find_result.files[0].path}} /opt/nexus
