--- a/deploy-nexus.yml
+++ b/deploy-nexus.yml
@@ -32,5 +32,10 @@
       file_type: directory
     register: find_result
   #- debug: msg={{find_result}}
+  - name: Check nexus folder is already exist
+    stat:
+      path: /opt/nexus
+    register: stat_result
+  - debug: msg={{stat_result}}
   - name: Rename Nexus folder
     shell: mv {{find_result.files[0].path}} /opt/nexus
