--- a/deploy-nexus.yml
+++ b/deploy-nexus.yml
@@ -32,10 +32,11 @@
       file_type: directory
     register: find_result
   #- debug: msg={{find_result}}
-  - name: Check nexus folder is already exist
+  - name: Check nexus folder stat
     stat:
       path: /opt/nexus
     register: stat_result
-  - debug: msg={{stat_result}}
+  #- debug: msg={{stat_result.stat.exists}}
   - name: Rename Nexus folder
     shell: mv {{find_result.files[0].path}} /opt/nexus
+    when: not stat_result.stat.exists
