--- a/deploy-nexus.yml
+++ b/deploy-nexus.yml
@@ -14,6 +14,11 @@
   hosts: nexus_server
   become: yes
   tasks: 
+  - name: Check nexus folder stat
+    stat:
+      path: /opt/nexus
+    register: stat_result
+  #- debug: msg={{stat_result.stat.exists}}
   - name: Download Nexus
     get_url:
       url: https://download.sonatype.com/nexus/3/nexus-3.41.1-01-unix.tar.gz
@@ -25,6 +30,7 @@
       src: "{{download_result.dest}}"
       dest: /opt/
       remote_src: yes
+    when: not stat_result.stat.exists
   - name: Find nexus folder
     find:
       paths: /opt/
@@ -32,11 +38,6 @@
       file_type: directory
     register: find_result
   #- debug: msg={{find_result}}
-  - name: Check nexus folder stat
-    stat:
-      path: /opt/nexus
-    register: stat_result
-  #- debug: msg={{stat_result.stat.exists}}
   - name: Rename Nexus folder
     shell: mv {{find_result.files[0].path}} /opt/nexus
     when: not stat_result.stat.exists
@@ -70,11 +71,13 @@
 
 - name: Start nexus with nexus user 
   hosts: nexus_server
-  become: yes
+  become: True 
+  become_user: nexus
   tasks:
   - name: Set run_as_user nexus
     lineinfile:
       path: /opt/nexus/bin/nexus.rc
       regexp: '^#run_as_user=""'
       line: run_as_user="nexus"
+  - name: /opt/nexus/bin/nexus start
 
