--- a/deploy-nexus.yml
+++ b/deploy-nexus.yml
@@ -79,5 +79,6 @@
       path: /opt/nexus/bin/nexus.rc
       regexp: '^#run_as_user=""'
       line: run_as_user="nexus"
-  - name: /opt/nexus/bin/nexus start
+  - name: Start nexus
+    command: /opt/nexus/bin/nexus start
 
