--- a/deploy-nexus.yml
+++ b/deploy-nexus.yml
@@ -71,7 +71,7 @@
 
 - name: Start nexus with nexus user 
   hosts: nexus_server
-  become: True 
+  become: true 
   become_user: nexus
   tasks:
   - name: Set run_as_user nexus
@@ -81,4 +81,21 @@
       line: run_as_user="nexus"
   - name: Start nexus
     command: /opt/nexus/bin/nexus start
+
+- name: Verify nexus running
+  hosts: nexus_server
+  tasks: 
+  - name: Check with ps 
+    shell: ps aux | grep nexus
+    register: app_status
+  - debug: msg={{app_status.stdout_lines}}
+  - name: Wait one minute
+    pause:
+      minutes: 1
+  - name: Check with netstat
+    shell: netstat -plnt
+    register: app_status
+  - debug: msg={{app_status.stdout_lines}} 
+
+
 
