--- a/deploy-docker.yml
+++ b/deploy-docker.yml
@@ -15,6 +15,6 @@
   tasks:
   - name: Install Docker-compose
     ansible.builtin.get_url:
-      url: https://github.com/docker/compose/releases/latest/download/docker-compose-{{lookup('pipe', 'uname -m')}}
+      url: https://github.com/docker/compose/releases/download/1.29.2/docker-compose-Linux-x86_64
       dest: /usr/local/bin/docker-compose
       mode: +x
