--- a/deploy-docker.yml
+++ b/deploy-docker.yml
@@ -13,12 +13,8 @@
   hosts: docker_server
   become: yes
   tasks:
-  - name: Install libcrypt.so.1 library
-    ansible.builtin.package:
-      name: glibc-crypt  # Adjust the package name for your distribution
-      state: present
   - name: Install Docker-compose
     ansible.builtin.get_url:
-      url: https://github.com/docker/compose/releases/download/1.29.2/docker-compose-Linux-x86_64
+      url: https://github.com/docker/compose/releases/download/v2.20.3/docker-compose-linux-x86_64 
       dest: /usr/local/bin/docker-compose
-      mode: +x
+      mode: '+x'
