--- a/deploy-docker.yml
+++ b/deploy-docker.yml
@@ -20,6 +20,6 @@
     when: ansible_os_family == 'RedHat'
   - name: Install Docker-compose
     ansible.builtin.get_url:
-      url: https://github.com/docker/compose/releases/download/2.20.3/docker-compose-Linux-x86_6
+      url: https://github.com/docker/compose/releases/download/2.20.3/docker-compose-Linux-x86_64
       dest: /usr/local/bin/docker-compose
-      mode: '+x'
+      mode: "+x"
