--- a/deploy-docker.yml
+++ b/deploy-docker.yml
@@ -22,4 +22,4 @@
     ansible.builtin.get_url:
       url: https://github.com/docker/compose/releases/download/2.20.3/docker-compose-Linux-x86_64
       dest: /usr/local/bin/docker-compose
-      mode: "+x"
+      mode: '+x'
