--- a/deploy-docker.yml
+++ b/deploy-docker.yml
@@ -9,17 +9,32 @@
       update_cache: yes
       state: present
 
-- name: Install Docker-compose
+- name: Install Docker Compose
   hosts: docker_server
   become: yes
   tasks:
-  - name: Install glibc package (Amazon Linux)
-    ansible.builtin.package:
-      name: glibc
-      state: present
-    when: ansible_os_family == 'RedHat'
-  - name: Install Docker-compose
-    ansible.builtin.get_url:
-      url: https://github.com/docker/compose/releases/download/1.27.4/docker-compose-Linux-x86_64
-      dest: /usr/local/bin/docker-compose
-      mode: '+x'
+    - name: Install required packages
+      ansible.builtin.yum:
+        name:
+          - python3-pip
+          - python3-setuptools
+        state: present
+
+    - name: Install Docker Compose
+      command: pip3 install docker-compose
+      args:
+        creates: /usr/local/bin/docker-compose
+    - name: Ensure /usr/local/bin directory exists
+      ansible.builtin.file:
+        path: /usr/local/bin
+        state: directory
+        mode: '0755'
+
+    - name: Add /usr/local/bin to system PATH
+      lineinfile:
+        path: /etc/environment
+        line: 'PATH="/usr/local/bin:$PATH"'
+
+    - name: Reload systemd manager configuration
+      ansible.builtin.command: systemctl daemon-reload
+      become: yes
