--- a/deploy-docker.yml
+++ b/deploy-docker.yml
@@ -8,3 +8,25 @@
       name: docker
       update_cache: yes
       state: present
+
+- name: Install Docker Compose on Amazon Linux 2023
+  hosts: docker_server
+  become: yes
+  tasks:
+    - name: Install Docker Compose
+      shell: |
+        curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-Linux-x86_64" -o /usr/local/bin/docker-compose
+        chmod +x /usr/local/bin/docker-compose
+      args:
+        creates: /usr/local/bin/docker-compose
+
+    - name: Check Docker Compose version
+      command: "docker-compose --version"
+      register: compose_version
+      changed_when: false
+      failed_when: false
+
+    - name: Print Docker Compose version
+      debug:
+        var: compose_version.stdout_lines
+
