--- a/deploy-docker.yml
+++ b/deploy-docker.yml
@@ -38,8 +38,18 @@
       name: chinu
       groups: docker
       append: yes
-  - name: Reconnect to server session
-    ansible.builtin.meta: reset_connection
+  - name: Log out and log back in as chinu
+    hosts: docker_server
+    become: yes
+    become_user: chinu
+    tasks:
+    - name: Log out
+      ansible.builtin.command: logout
+      async: 0
+      poll: 0
+
+    - name: Log back in
+      ansible.builtin.shell: /bin/bash
 
 - name: Test docker pull 
   hosts: docker_server 
