--- a/deploy-docker.yml
+++ b/deploy-docker.yml
@@ -51,5 +51,6 @@
   hosts: docker_server 
   tasks:
   - name: Pull Redis
-    ansible.builtin.command: docker pull redis
-
+    community.docker.docker_image:
+      name: redis 
+      source: pull
