--- a/deploy-docker.yml
+++ b/deploy-docker.yml
@@ -57,9 +57,8 @@
 
 - name: Start Docker Container
   hosts: docker_server
-  vars_prompt:
-  - name: docker_password
-    prompt: Enter password for docker registry 
+  vars_file:
+  - project-vars 
   tasks:
   - name: Copy Docker compose 
     ansible.builtin.copy:
