--- a/deploy-docker.yml
+++ b/deploy-docker.yml
@@ -2,6 +2,7 @@
 - name: Intsall Docker and docker-compose
   hosts: docker_server
   become: yes
+  gather_facts: False
   tasks:
   - name: Install docker
     ansible.builtin.yum:
