--- a/deploy-docker.yml
+++ b/deploy-docker.yml
@@ -37,6 +37,7 @@
     ansible.builtin.pip:
       name: docker
       state: present
+      extra_args: "--ignore-installed"
 
 - name: Add user to docker group 
   hosts: docker_server
