--- a/deploy-docker.yml
+++ b/deploy-docker.yml
@@ -33,9 +33,11 @@
     ansible.builtin.package:
       name: python3-pip
       state: present
-  - name: Install Docker Python library
+  - name: Install Docker Python and Docker Compose libraries
     ansible.builtin.pip:
-      name: docker
+      name: 
+        - docker
+        - docker-compose
       state: present
       extra_args: "--ignore-installed"
 
