--- a/deploy-docker-02.yml
+++ b/deploy-docker-02.yml
@@ -13,3 +13,9 @@
         - docker 
       update_cache: yes
       state: present 
+  - name: Install Docker-compose 
+    shell: |
+      curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-Linux-x86_64" -o /usr/local/bin/docker-compose
+      chmod +x /usr/local/bin/docker-compose
+    args:
+      creates: /usr/local/bin/docker-compose
