--- a/deploy-docker-02.yml
+++ b/deploy-docker-02.yml
@@ -13,18 +13,9 @@
         - docker 
       update_cache: yes
       state: present 
-  - name: Install Docker-compose 
-    shell: |
-      curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-Linux-x86_64" -o /usr/local/bin/docker-compose
-      chmod +x /usr/local/bin/docker-compose
-    args:
-      creates: /usr/local/bin/docker-compose
-  - name: Check Docker Compose version
-    command: "docker-compose --version"
-    register: compose_version
-    changed_when: false
-    failed_when: false
+  - name: Install Docker-compose
+    ansible.builtin.get_url: 
+      url: https://github.com/docker/compose/releases/download/1.27.4/docker-compose-Linux-{{lookup('pipe', 'uname -m')}}
+      dest: /usr/local/bin/docker-compose
+      mode: +x
 
-  - name: Print Docker Compose version
-    debug:
-      var: compose_version.stdout_lines 
