--- a/deploy-docker-02.yml
+++ b/deploy-docker-02.yml
@@ -14,7 +14,7 @@
       update_cache: yes
       state: present 
   - name: Install Docker-compose
-    ansible.builtin.get_url: 
+    get_url: 
       url: https://github.com/docker/compose/releases/download/1.27.4/docker-compose-Linux-{{lookup('pipe', 'uname -m')}}
       dest: /usr/local/bin/docker-compose
       mode: +x
