--- a/deploy-docker-02.yml
+++ b/deploy-docker-02.yml
@@ -14,7 +14,7 @@
       update_cache: yes
       state: present 
   - name: Install Docker-compose
-    get_url: 
+    ansible.builtin.get_url: 
       url: https://github.com/docker/compose/releases/latest/download/docker-compose-Linux-x86_64
       dest: /usr/local/bin/docker-compose
       mode: +x
