--- a/deploy-docker-02.yml
+++ b/deploy-docker-02.yml
@@ -13,14 +13,21 @@
         - docker 
       update_cache: yes
       state: present 
-  - name: Install Docker-compose
-    ansible.builtin.get_url: 
-      url: https://github.com/docker/compose/releases/latest/download/docker-compose-Linux-x86_64
-      dest: /usr/local/bin/docker-compose
-      mode: +x
-  - name: Add /usr/local/bin to PATH
-    ansible.builtin.lineinfile:
-      path: ~/.bashrc  # You can change this to the appropriate shell profile file if needed
-      line: 'export PATH="/usr/local/bin:$PATH"'
-      create: yes
+  - name: Install Docker Compose
+    shell: |
+      curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-Linux-x86_64" -o /usr/local/bin/docker-compose
+      chmod +x /usr/local/bin/docker-compose
+    args:
+      creates: /usr/local/bin/docker-compose
+
+  - name: Check Docker Compose version
+    command: "docker-compose --version"
+    register: compose_version
+    changed_when: false
+    failed_when: false
+
+  - name: Print Docker Compose version
+    debug:
+      var: compose_version.stdout_lines
+  - name: start Docker 
 
