--- a/deploy-docker-02.yml
+++ b/deploy-docker-02.yml
@@ -29,8 +29,12 @@
     register: compose_version
     changed_when: false
     failed_when: false
-
   - name: Print Docker Compose version
     debug:
       var: compose_version.stdout_lines 
+  
+  - name: Start docker daemon 
+    ansible.builtin.systemd:
+      name: docker
+      state: started
 
