--- a/deploy-docker-02.yml
+++ b/deploy-docker-02.yml
@@ -37,4 +37,16 @@
     ansible.builtin.systemd:
       name: docker
       state: started
+  - name: Install pip3 
+    ansible.builtin.package:
+      name: python3-pip
+      state: present
+  - name: Install Docker Python and Docker Compose libraries
+    ansible.builtin.pip:
+      name:
+        - docker
+        - docker-compose
+
+
+
 
