--- a/deploy-docker-02.yml
+++ b/deploy-docker-02.yml
@@ -75,6 +75,8 @@
     community.docker.docker_image:
       name: alpine
       source: pull
+    vars:
+      ansible_python_interpreter: /usr/bin/python
 
 
 
