--- a/deploy-docker-02.yml
+++ b/deploy-docker-02.yml
@@ -70,6 +70,8 @@
   hosts: docker_server
   become: yes
   become_user: chinu
+  vars_files:
+  - project-vars
   tasks:
   - name: Copy Docker compose
     ansible.builtin.copy:
