--- a/inventory_aws_ec2.yml
+++ b/inventory_aws_ec2.yml
@@ -5,3 +5,13 @@ aws_secret_key:
 
 regions:
 - us-east-2
+
+#filters:
+  #tag:Name: dev*
+  #instance-state-name: running
+
+keyed_groups:
+ - key: tags
+   prefix: tag
+ - key: instance_type
+   prefix: instance_type
