--- a/deploy-to-k8s.yml
+++ b/deploy-to-k8s.yml
@@ -8,4 +8,4 @@
       api_version: v1
       kind: Namespace
       state: present
-      kubeconfig: /root/.kube/config
+      kubeconfig: /home/chinu/.kube/config
